turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:14: error: ')' expected but 'if' found.
    if (rule(ind)=='R') {
    ^